fixed css overlaps and started get started page

--- a/src/pages/clubs/components/clanding/cLanding.scss
+++ b/src/pages/clubs/components/clanding/cLanding.scss
@@ -1,6 +1,6 @@
 @import "../../../../global.scss";
 
-.landing {
+.cLanding {
 	height: 100vh;
 	width: 100vw;
 	position: relative;
