--- a/src/pages/get started page/components/GtLanding/gsLanding.scss
+++ b/src/pages/get started page/components/GtLanding/gsLanding.scss
@@ -1,6 +1,6 @@
 @import "../../../../global.scss";
 
-.landing {
+.gsLanding {
 	height: 100vh;
 	width: 100vw;
 	position: relative;
@@ -9,7 +9,7 @@
 			rgba(255, 255, 255, 0.3),
 			rgba(255, 255, 255, 0.1)
 		),
-		url(https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1169&q=80)
+		url(https://images.unsplash.com/photo-1527784011719-3349bf049cf4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80)
 			center;
 	min-width: 100%;
 	min-width: 100%;
@@ -50,29 +50,41 @@
 			position: absolute;
 
 			.top {
+				padding-top: 20px;
 				font-family: Hind;
 				font-size: 24px;
-				font-weight: 400;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				h1 {
-					padding-top: 30px;
-				}
+				font-weight: 500;
 			}
 
-			.center {
-				font-family: "Saira", sans-serif;
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-				justify-content: center;
-				font-weight: 700;
-				width: 500px;
-				h2 {
-					font-size: 20px;
-					text-align: center;
-					padding-bottom: 100px;
+			.bottom {
+				font-family: inherit;
+				.btn-container {
+					padding-bottom: 20px;
+					height: 50px;
+					width: 650px;
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+					justify-content: center;
+					overflow: hidden;
+
+					.btn {
+						margin: 20px;
+						padding: 7px;
+						font-size: 24px;
+						font-family: Hind;
+						color: rgb(255, 255, 255);
+						background-color: $brandColor;
+						outline: none;
+						border-style: none;
+						border-radius: 15px;
+						cursor: pointer;
+						transition: all 0.5s ease;
+
+						&:hover {
+							background-color: $buttonColor;
+						}
+					}
 				}
 			}
 		}
