--- a/src/pages/partners page/components/partnersLanding/partnersLanding.scss
+++ b/src/pages/partners page/components/partnersLanding/partnersLanding.scss
@@ -1,6 +1,6 @@
 @import "../../../../global.scss";
 
-.landing {
+.pLanding {
 	height: 100vh;
 	width: 100vw;
 	position: relative;
@@ -9,7 +9,7 @@
 			rgba(255, 255, 255, 0.3),
 			rgba(255, 255, 255, 0.1)
 		),
-		url(https://images.unsplash.com/photo-1517048676732-d65bc937f952?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)
+		url(https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1169&q=80)
 			center;
 	min-width: 100%;
 	min-width: 100%;
@@ -45,59 +45,34 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: space-between;
+			justify-content: space-around;
 			bottom: 75px;
 			position: absolute;
 
-			.banner {
+			.top {
+				font-family: Hind;
+				font-size: 24px;
+				font-weight: 400;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				h1 {
+					padding-top: 30px;
+				}
+			}
+
+			.center {
 				font-family: "Saira", sans-serif;
 				display: flex;
 				flex-direction: column;
 				align-items: center;
 				justify-content: center;
 				font-weight: 700;
+				width: 500px;
 				h2 {
-					font-size: 40px;
-				}
-
-				h3 {
-					font-size: 40px;
-				}
-			}
-
-			.bottom {
-				font-family: inherit;
-				position: relative;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				.btn-container {
-					position: absolute;
-					bottom: 5px;
-					height: 180px;
-					width: 675px;
-					display: flex;
-					flex-wrap: wrap;
-					align-items: center;
-					justify-content: center;
-
-					.btn {
-						width: 250px;
-						height: 55px;
-						font-size: 18px;
-						font-family: Hind;
-						color: rgb(255, 255, 255);
-						background-color: $buttonColor;
-						outline: none;
-						border-style: none;
-						border-radius: 15px;
-						cursor: pointer;
-						transition: all 0.5s ease;
-
-						&:hover {
-							background-color: $buttonHover;
-						}
-					}
+					font-size: 20px;
+					text-align: center;
+					padding-bottom: 100px;
 				}
 			}
 		}
